codex-rs/tui/src/snapshots/codex_tui__app_shell__tests__renders_tool_progress_snapshot.snap
---
source: tui/src/app_shell_tests.rs
expression: "render_shell(&shell, area)"
---
                                                  │
 ◆ BC      gpt-5-codex ▾   default ▾   default ▾  │   Status   │  Agents   │  Sessions   │  Help
──────────────────────────────────────────────────│─────────────────────────━━━━━━━━━━━━━──────────
                                                  │
 ◆ CONVERSATION                                   │▎◆ SESSIONS
                                                │ │▎○ CLICK TO FOCUS  ACTIVE  0 sessions
 ▎ CODEX  Started a fullscreen app shell backed ┃ │▎+ New session  Ctrl+N
          by app-server turns.                  ┃ │▎loading sessions
 ▎ PLAN  1. Build shell                         ┃ │
         2. Wire transcript                     ┃ │▎◆ THREAD
         3. Render dashboard                    ┃ │▎stage-one
                                                ┃ │▎id 01900000-0000-7000-8000-000000000001
 ▌ tool exec just test -p codex-tui             ┃ │▎resume, fork, archive, delete in session list
                                                ┃ │
 ▌ edited 3 files +128 -24                      ┃ │
                                                ┃ │
 ▌ tool mcp progress: indexed 42 files          ┃ │
 ▌      preparing search results                ┃ │
                                                ┃ │
 ▎ CODEX  The new shell owns the fullscreen     ┃ │
          surface.                              ┃ │
                                                  │
╭────────────────────────────────────────────────╮│
│◆ MESSAGE  1:37                                 ││
│> Summarize the new shell architecture          ││
│                                                ││
│                                                ││
╰────────────────────────────────────────────────╯│
