codex-rs/tui/src/snapshots/codex_tui__app_shell__tests__renders_transcript_selection_snapshot.snap
---
source: tui/src/app_shell_tests.rs
expression: "render_shell(&shell, area)"
---
                                                  │
 ◆ BC       gpt-5-codex ▾   default ▾  ● thinking │ Sessions │ Agents │ Workspace │ Settings │ Help
──────────────────────────────────────────────────│━━━━━━━━━━━─────────────────────────────────────
                                                  │
 ◆ CONVERSATION  SELECT 3/6                       │▎◆ SESSIONS
 ▎ SYSTEM  Better Codex app shell                 │▎○ CLICK TO FOCUS  ACTIVE  0 sessions
 ▎ YOU  Create a divergent standalone TUI.        │▎loading sessions
                                                  │
 ▶ CODEX  Started a fullscreen app shell backed   │▎◆ TOOLS
          by app-server turns.                    │▎in progress exec just test -p codex-tui
 ▎ PLAN  1. Build shell                           │▎completed file changes in app_shell
         2. Wire transcript                       │
         3. Render dashboard                      │▎◆ THREAD
                                                  │▎stage-one
 ▌ tool exec just test -p codex-tui               │▎id 01900000-0000-7000-8000-000000000001
                                                  │▎resume, fork, archive, delete in session list
 ▌ edited 3 files +128 -24                        │
                                                  │▎◆ STATUS
 ▎ CODEX  The new shell owns the fullscreen       │▎thinking
          surface.                                │
                                                  │▎◆ PLAN
                                                  │▎Build the standalone shell in slices.
╭────────────────────────────────────────────────╮│▎x Shell frame
│◆ MESSAGE  1:37                                 ││▎> Transcript model
│> Summarize the new shell architecture          ││▎- Approvals
│                                                ││
│                                                ││
╰────────────────────────────────────────────────╯│
