codex-rs/tui/src/snapshots/codex_tui__app_shell__tests__renders_workspace_git_status_snapshot.snap
---
source: tui/src/app_shell_tests.rs
expression: "render_shell(&shell, area)"
---
 ◆ BC       gpt-5-codex ▾   default ▾  ● thinking │
──────────────────────────────────────────────────│ Sessions │ Agents │ Workspace │ Settings │Help
                                                  │────────────────────━━━━━━━━━━━━────────────────
 ◆ CONVERSATION                                   │
 ▎ SYSTEM  Better Codex app shell                 │▎◆ WORKSPACE
 ▎ YOU  Create a divergent standalone TUI.        │▎cwd /workspace/better-codex
                                                  │▎branch feature/app-shell-dashboard
 ▎ CODEX  Started a fullscreen app shell backed   │▎changes 13 files
          by app-server turns.                    │▎  added 2
 ▎ PLAN  1. Build shell                           │▎  modified 5
         2. Wire transcript                       │▎  deleted 1
         3. Render dashboard                      │▎  renamed 1
                                                  │▎  conflicted 1
 ▌ tool exec just test -p codex-tui               │▎  untracked 3
                                                  │▎profile managed
 ▌ edited 3 files +128 -24                        │▎files restricted, net restricted
                                                  │▎roots none selected
 ▎ CODEX  The new shell owns the fullscreen       │
          surface.                                │▎◆ EDITS
                                                  │▎3 files +128 -24
                                                  │
                                                  │▎◆ TOOLS
                                                  │▎in progress exec just test -p codex-tui
                                                  │▎completed file changes in app_shell
                                                  │
                                                  │
                                                  │
                                                  │
                                                  │
                                                  │
                                                  │
                                                  │
                                                  │
                                                  │
                                                  │
                                                  │
                                                  │
                                                  │
                                                  │
                                                  │
                                                  │
                                                  │
╭────────────────────────────────────────────────╮│
│◆ MESSAGE  ENTER SEND  SHIFT+ENTER NEWLINE  1:37││
│> Summarize the new shell architecture          ││
│                                                ││
│                                                ││
╰────────────────────────────────────────────────╯│
