codex-rs/tui/src/snapshots/codex_tui__app_shell__tests__renders_workspace_roots_snapshot.snap
---
source: tui/src/app_shell_tests.rs
expression: "render_shell(&shell, area)"
---
                                                  │
 ◆ BC       gpt-5-codex ▾   default ▾  ● thinking │ Sessions │ Agents │ Workspace │ Settings │ Help
──────────────────────────────────────────────────│────────────────────━━━━━━━━━━━─────────────────
                                                  │
 ◆ CONVERSATION                                   │▎◆ WORKSPACE
 ▎ SYSTEM  Better Codex app shell                 │▎cwd /workspace/better-codex
 ▎ YOU  Create a divergent standalone TUI.        │▎profile managed
                                                  │▎files restricted, net restricted
 ▎ CODEX  Started a fullscreen app shell backed   │▎roots 4 writable
          by app-server turns.                    │▎  /workspace/better-codex
 ▎ PLAN  1. Build shell                           │▎  /workspace/better-codex/codex-rs
         2. Wire transcript                       │▎  /tmp/codex-cache
         3. Render dashboard                      │▎  +1 more
                                                  │
 ▌ tool exec just test -p codex-tui               │▎◆ EDITS
                                                  │▎3 files +128 -24
 ▌ edited 3 files +128 -24                        │
                                                  │▎◆ TOOLS
 ▎ CODEX  The new shell owns the fullscreen       │▎in progress exec just test -p codex-tui
          surface.                                │▎completed file changes in app_shell
                                                  │
                                                  │
                                                  │
                                                  │
                                                  │
                                                  │
                                                  │
                                                  │
                                                  │
                                                  │
                                                  │
                                                  │
                                                  │
                                                  │
                                                  │
                                                  │
╭────────────────────────────────────────────────╮│
│◆ MESSAGE  1:37                                 ││
│> Summarize the new shell architecture          ││
│                                                ││
│                                                ││
╰────────────────────────────────────────────────╯│
