codex-rs/tui/src/snapshots/codex_tui__app_shell__tests__renders_workspace_route_snapshot.snap
---
source: tui/src/app_shell_tests.rs
expression: "render_shell(&shell, area)"
---

 Better Codex                                                    ┌────────┬─────────┬────────┬────┐
                                                                 │Settings│Workspace│Sessions│Help│
                                                                 └────────┴─────────┴────────┴────┘
 Conversation
 system: Better Codex app shell                                  Workspace
 you: Create a divergent standalone TUI.                         cwd /workspace/better-codex
                                                                 branch feature/app-shell-dashboard
 codex: Started a fullscreen app shell backed by app-server      changes 13 files
        turns.                                                     added 2
 plan: 1. Build shell                                              modified 5
       2. Wire transcript                                          deleted 1
       3. Render dashboard                                         renamed 1
                                                                   conflicted 1
 ▌ tool exec just test -p codex-tui                                untracked 3
                                                                 profile managed
 ▌ edited 3 files +128 -24                                       files restricted, net restricted
                                                                 roots none selected
 codex: The new shell owns the fullscreen surface.
                                                                 Edits
                                                                 3 files +128 -24

                                                                 Tools
                                                                 in progress exec just test -p c...
                                                                 completed file changes in app_s...




 Composer ready 1:37
 > Summarize the new shell architecture
