codex-rs/tui/src/snapshots/codex_tui__app_shell__tests__resolved_interactive_request_messages.snap
---
source: tui/src/app_shell_tests.rs
expression: "render_shell(&shell, Rect::new(0, 0, 100, 28,))"
---
                                                  │
  Dashboard  ◆ BC      gpt-5-codex ▾   default ▾  │   Status   │  Agents   │  Sessions   │  Help
──────────────────────────────────────────────────│─────────────────────────━━━━━━━━━━━━━──────────
                                                  │
 ◆ CONVERSATION                                   │▎◆ SESSIONS
 ▎ STATUS  request resolved                       │▎○ CLICK TO FOCUS  ACTIVE  0 sessions
 ▎ STATUS  elicitation requested: MCP github:     │▎+ New session  Ctrl+N
           URL request                            │▎loading sessions
 ▎ STATUS  request resolved                       │
                                                  │▎◆ THREAD
 ▎ CODEX  The new shell owns the fullscreen       │▎stage-one
          surface.                                │▎id 01900000-0000-7000-8000-000000000001
                                                  │▎resume, fork, archive, delete in session list
                                                  │
                                                  │
                                                  │
                                                  │
                                                  │
                                                  │
                                                  │
                                                  │
                                                  │
╭────────────────────────────────────────────────╮│
│◆ MESSAGE  1:1                                  ││
│> Type a message, Shift+Enter for newline       ││
│                                                ││
│                                                ││
╰────────────────────────────────────────────────╯│
