codex-rs/tui/src/snapshots/codex_tui__app_shell__tests__running_shell_command.snap
---
source: tui/src/app_shell_tests.rs
expression: "render_shell(&shell, Rect::new(0, 0, 100, 28,))"
---
                                                  │
  Dashboard  ◆ BC      gpt-5-codex ▾   default ▾  │   Status   │  Agents   │  Sessions   │  Help
──────────────────────────────────────────────────│
                                                  │◆ CONVERSATION         │ ◆ COMPOSER
 ◆ CONVERSATION                                   │ Alt+↑ / ↓   Select ms…│  ⌘← / →      Line ends
 ▎ SYSTEM  Better Codex app shell                 │ ↵ / c       Copy item │  ⌘⌫          Delete st…
 ▎ YOU  Create a divergent standalone TUI.        │ e           Branch    │  ⌥/^ + ←→    Move word
                                                  │ ^O          Copy reply│  S/A + ↵     Newline
 ▎ CODEX  Started a fullscreen app shell backed   │◆ DASHBOARD            │  Alt+M       Model
          by app-server turns.                    │ ^1 … ^4     Open tab  │  Alt+E       Effort
 ▎ PLAN  1. Build shell                           │ Alt+← / →   Prev/next │ ◆ APP
         2. Wire transcript                       │ Pg↑ / Pg↓   Scroll he…│  ^P          Commands
         3. Render dashboard                      │ ⇧Alt+←/→    Resize    │  ^D          Show/hide
                                                  │◆ SESSIONS             │  ^C          Stop/canc…
 ▌ tool exec just test -p codex-tui               │ ↑↓ / jk     Select    │  Esc ×2      Exit app
                                                  │ ↵ / r       Resume    │  ^N          New chat
 ▌ edited 3 files +128 -24                        │ f           Fork      │ ◆ AGENTS
                                                  │ a           Archive   │  ↵           Focus/log
 ▎ CODEX  The new shell owns the fullscreen       │ u           Unarchive │  ↑↓ / jk     Select
          surface.                                │ v           Switch vi…│  g / G       First/last
                                                  │ n           Rename    │  r           Reload log
                                                  │ /           Search    │
╭────────────────────────────────────────────────╮│ d           Delete    │
│◆ MESSAGE  1:1                                  ││
│> Type a message, Shift+Enter for newline       ││
│                                                ││
│                                                ││
╰────────────────────────────────────────────────╯│
