codex-rs/tui/src/snapshots/codex_tui__app_shell__tests__safety_buffering_retry_fork.snap
---
source: tui/src/app_shell_tests.rs
expression: "render_shell(&shell, Rect::new(0, 0, 100, 24,),)"
---
                                                  │
  Dashboard  ◆ BC          gpt-5-codex ▾  turn 0s │   Status   │  Agents   │  Sessions   │  Help
──────────────────────────────────────────────────│─────────────────────────━━━━━━━━━━━━━──────────
                                                  │
 ◆ CONVERSATION                                   │▎◆ SESSIONS
 ▎ SYSTEM  switched session                       │▎○ CLICK TO FOCUS  ACTIVE  0 sessions
 ▎ SYSTEM  loaded 1 previous turns                │▎+ New session  Ctrl+N
 ▎ YOU  Earlier context                           │▎loading sessions
 ──────────────────────────────────────────────── │
 ▎ SYSTEM  2 queued follow-ups remain on the      │▎◆ THREAD
           previous session 01900000-0000-7000-   │▎forked
           8000-000000000001. Open Sessions to    │▎id 01900000-0000-7000-8000-000000000202
           return to it.                          │▎resume, fork, archive, delete in session list
 ▎ YOU  Explain the request                       │
                                                  │
                                                  │
        Also keep this clarification              │
                                                  │
╭────────────────────────────────────────────────╮│
│◆ MESSAGE  ● RUNNING  1:23                      ││
│> Keep this unsent draft                        ││
│                                                ││
│                                                ││
╰────────────────────────────────────────────────╯│
